matrix/matrixto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrixto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrixto
  template:
    metadata:
      labels:
        app: matrixto
    spec:
      containers:
        - name: matrixto
          image: ghcr.io/mibmo/matrix.to:latest
          ports:
            - containerPort: 3000
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 10
