matrix/matrixto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrixto
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: matrixto
